# borscht

./: .dir-locals.el  .gitignore  Cargo.toml  LICENSE  README.md  analyze.sh  test.sh
borscht/: Cargo.toml
borscht/src/: main.rs
database/: Session.vim  elona1.22.ron  elona1.22nomacros.ron  oomSESTepNC.ron  oomSESTepNC_20220824.ron  parse.rb  plus1.90.ron  plus2.05.ron  plus2.06.ron  plus2.06fix.ron  plus2.07.ron  plus2.08.ron  plus2.08fix.ron  plus2.09.ron  plus2.10.ron  plus2.11.ron  plus2.12.ron  plus2.13.ron  plus2.14.ron  plus2.15R.ron  vanilla.ron
erystia/: Cargo.toml
erystia/src/: lib.rs
exe2ax/: Cargo.toml
exe2ax/src/: ax.rs  crypt.rs  dpm.rs  error.rs  exe.rs  lib.rs
exe2ax/src/as_/: dictionary.rs  mod.rs
exe2ax/src/as_/ax3/: ast.rs  data.rs  dictionary.rs  lexical.rs  mod.rs  util.rs  view.rs  visitor.rs
exe2ax/src/ax/: mod.rs
