[package]
name = "exe2ax"
version = "0.0.1"
authors = [ "Ruin0x11 <nonbirithm@fastmail.com>" ]

[dependencies]
anyhow = "1.0.38"
pelite = "0.9.0"
byteorder = "1.4.3"
bitflags = "1.2.1"
csv = "1.1.6"
encoding_rs = "0.8.28"
encoding_rs_io = "0.1.7"
enum-utils = "0.1.2"
paste = "0.1"
enum-as-inner = "0.3.3"
